--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 JWT_SECRET=ajaykumarsecret
+
+MONGO_URL=mongodb+srv://ajay:Ajay89797417@cluster0.ksujg.mongodb.net/movieflix?retryWrites=true&w=majority
