--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    
     "axios": "^0.24.0",
     "firebase": "^9.6.8",
     "react": "^17.0.2",
@@ -20,7 +19,7 @@
     "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
