--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 JWT_SECRET=ajaykumarsecret
 
+PORT=5000
 MONGO_URL=mongodb+srv://ajay:Ajay89797417@cluster0.ksujg.mongodb.net/movieflix?retryWrites=true&w=majority
