--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movieflix",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/movieflix",
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
@@ -20,10 +21,12 @@
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
