--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
